# neuroevolution

./: .gitignore  README.md  pyproject.toml
src/: main.py
src/data/: dataset.py  downloader.py  loader.py
src/models/: dynamic_model.py  evaluator.py
src/optimization/: bayesian_optimizer.py  genetic_algorithm.py  individual.py
src/utils/: visualizer.py
